@startuml ClassDiagram
abstract class FileFactory{
    {static} +getFactory(path):FileFactory
    {abstract} +loadFile(path):File
}
class RawFileFactory{
  +loadFile(path):RawFile
}
class RawFileFactory{
   +loadFile(path):RawFile
}
class NumpyFileFactory{
   +loadFile(path):NumpyFile
}

abstract File{
}

class RawFile{
}
class RawFile{
}
class NumpyFile{
}

FileFactory <|-- RawFileFactory
FileFactory <|-- NumpyFileFactory
FileFactory <|-- RawFileFactory

File <|-- RawFile
File <|-- RawFile
File <|-- NumpyFile

FileFactory ..> File

@enduml